--- a/style.css
+++ b/style.css
@@ -497,42 +497,41 @@ header {
   color: white;
 }
 
-#portfolio {
-  position: relative;
-}
 
 [data-popup="popup-window"] {
-  background-color: #fff;
-  border: 1px solid #ebecf0;
+  position: fixed;
   box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
-  border-radius: 16px;
-  padding: 24px;
-  width: 90%;
-  position: relative;
-  z-index: 99;
+  -webkit-box-shadow: 10px 8px 119px 200px rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #ebecf094;
+  overflow-y: auto;
+  z-index: 100;
   visibility: hidden;
 }
-
-.content1,
-.content4,
-.content2,
-.content3 {
-  position: relative;
-  z-index: 99;
-  margin-top: -45em;
-  overflow-y: hidden;
+.container1{
+width: 90%;
+margin: 5px auto;
+background-color: #fff;
+border-radius: 20px;
+padding: 24px;
 }
-
 .popup-image {
   width: 100%;
-  height: 220px;
-  margin-bottom: 1rem;
 }
 
+.pop-list{
+  margin-block: .5em;
+}
+
+.popicons li{
+ margin-block: 1em 0 !important;
+}
 .flex-two {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .popup-close {
@@ -552,6 +551,7 @@ header {
 }
 
 .buttons button {
+  margin-top: -5%;
   background: transparent;
   padding: 0.5rem 1rem;
   margin-block: 1rem 2rem;
@@ -565,6 +565,10 @@ header {
   outline: none;
 }
 
+#first{
+  margin-right: 1%;
+}
+
 #error {
   color: red;
   background-color: #fff;
@@ -575,6 +579,7 @@ header {
   top: 0;
 }
 
+
 @media screen and (min-width: 768px) {
   * {
     padding: 0;
@@ -582,7 +587,6 @@ header {
     text-decoration: none;
     box-sizing: border-box;
     list-style: none;
-    overflow-x: hidden;
   }
 
   header {
@@ -701,6 +705,7 @@ header {
   .cart-normal {
     flex-direction: row;
     width: 90%;
+    margin: 5em 2em;
   }
 
   .cart-image1,
@@ -718,7 +723,7 @@ header {
     padding: 16px;
     display: flex;
     flex-direction: row-reverse;
-    margin: 2rem;
+    margin: 5em 2rem;
   }
 
   .cart-text {
@@ -897,69 +902,74 @@ header {
   }
 
   [data-popup="popup-window"] {
-    background-color: #fff;
-    border: 1px solid #ebecf0;
+    position: fixed;
     box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
-    border-radius: 16px;
-    padding: 24px;
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow-y: hidden;
-    visibility: hidden;
+    -webkit-box-shadow: 10px 8px 119px 200px rgba(0, 0, 0, 0.45);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #ebecf094;
+    overflow-y: auto;
+    z-index: 100;
   }
-
-  .content1,
-  .content4,
-  .content2,
-  .content3 {
-    position: relative;
-    z-index: 99;
-    margin-top: -35em;
-    overflow-y: hidden;
-  }
+.container1{
+  width: 90%;
+  margin: 5px auto;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 24px;
+}
 
   .popup-image {
-    width: 90%;
+    width: 100%;
     height: 500px;
     margin-bottom: 1rem;
+    transform: scale(1);
+    transform-origin: center center;
   }
 
   .flex-two {
     display: flex;
-    gap: 1rem;
     flex-direction: row;
+    justify-content: space-between;
+    width: 104%;
   }
 
   .popup-close {
-    font-size: 1.5rem;
-    color: rgba(103, 121, 142, 1);
-    margin-right: -3em;
+  font-size: 1rem;
+  position: absolute;
+  right: 10%;
+  top: 7%;
+  color: rgba(103, 121, 142, 1);
+  cursor: pointer;
   }
 
   .text-popup {
-    margin-left: 0;
-    width: 60%;
+    width: 70%;
   }
 
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
-  }
 
-  .popup-icon {
-    width: 306px;
-  }
+.popup-icon {
+  width: 306px;
+  margin-right: 0;
+}
 
-  #error {
-    color: red;
-    background-color: #fff;
-    font-size: 17px;
-    text-align: center;
-    border-radius: 5px;
-    position: relative;
-    top: -10px;
-  }
+.popicons{
+  margin-left: -2%;
+}
+
+#first{
+  margin-right: 1%;
+}
+
+#error {
+  color: red;
+  background-color: #fff;
+  font-size: 17px;
+  text-align: center;
+  border-radius: 5px;
+  position: relative;
+  top: -10px;
+}
 }
